incorrect repainting when a table has a transform https://bugs.webkit.org/show_bug.cgi?id=109867

Patch by Arnaud Renevier <a.renevier@sisa.samsung.com> on 2013-05-03
Reviewed by Simon Fraser.

Source/WebCore:

Disable LayoutState when table, tableRow or tableSection render
objects have transforms or reflections.

Tests: fast/repaint/reflection-table-layout.html
       fast/repaint/transform-table-layout.html

* rendering/RenderTable.cpp:
(WebCore::RenderTable::layout):
* rendering/RenderTableRow.cpp:
(WebCore::RenderTableRow::layout):
* rendering/RenderTableSection.cpp:
(WebCore::RenderTableSection::layout):
(WebCore::RenderTableSection::layoutRows):

LayoutTests:

Create tests that resize an element inside a display: table element.
Compare to a reference html file where the element has a static size.
In the first test, the table like element has a transform. In the
second, it has a reflection.

* fast/repaint/reflection-table-layout-expected.html: Added.
* fast/repaint/reflection-table-layout.html: Added.
* fast/repaint/transform-table-layout-expected.html: Added.
* fast/repaint/transform-table-layout.html: Added.

Canonical link: https://commits.webkit.org/134015@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149550 268f45cc-cd09-0410-ab3c-d52691b4dbfc